hphp/hack/test/typecheck/constraints/typedef2.php.exp
File "typedef2.php", line 5, characters 24-40:
Some type arguments violate their constraints (Typing[4323])
  File "typedef2.php", line 3, characters 22-22:
  `T` is a constrained type parameter
  File "typedef2.php", line 3, characters 27-29:
  This type constraint is violated
  File "typedef2.php", line 3, characters 27-29:
  Expected `num`
  File "typedef2.php", line 5, characters 35-39:
  But got `mixed`
